# descobridor

./: README.md  env.example  localization.yaml  pyproject.toml  setup.py
decisions/figures/: vpn_freshness.excalidraw
descobridor/: constants.py  helpers.py  the_logger.py
descobridor/discovery/: constants.py  hex_scan.py  parse_html.py  read_raw_reviews.py  review_age.py  review_parser.py  serp_api.py
descobridor/infra/learning/: new_task.py  recieve.py  t6_rpc_client.py  worker.py
descobridor/queueing/: change_serpjob_freq.py  constants.py  gmaps_scrape_sender.py  gmaps_scrape_worker.py  init_redis.py  observability.py  queues.py  sender_to_serp.py  serp_sender.py  serp_worker.py
