[tool.poetry]
name = "descobridor"
version = "0.1.1"
description = ""
authors = ["GG", "EG", "AB"]
readme = "README.md"
repository = "https://github.com/artisan-IA/descobridor"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = "3.10.7"
bs4 = "0.0.1"
h3 = "3.7.6"
joblib="1.2.0"
more_itertools = "9.0.0"
googlemaps = "4.7.3"
google_search_results = "2.4.1"
pandas = "1.5.*"
pika = "1.3.1"
python-dotenv = "0.21.0"
pyyaml = "6.0.*"
requests = "2.28.*"
scipy = "1.10.*"
truby = { git = "git+ssh://git@github.com/artisan-IA/truby.git", branch = "main" }

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
matplotlib = "*"
seaborn = "*"
ruff = "*"
pytest = "^7.2.0"
pytest-mock = "*"
pre_commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "B", "C", "I", "N", "S", "W"]
ignore = ["I001", "S101", "W605"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow long lines
line-length = 110

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
